Fix calendar icon color in dark mode in Chrome
Apparently Chrome now automatically inverts icon's color in dark mode.

--- a/src/css/themes/bulma.css
+++ b/src/css/themes/bulma.css
@@ -46,10 +46,6 @@
     --link-hover-color: #fff;
     --link-active-color: #fff;
   }
-
-  input::-webkit-calendar-picker-indicator {
-    filter: invert();
-  }
 }
 
 input {
